<resources>
    <string name="app_name">desoxyribonucleique</string>
    <string name="couleur">Changement de la couleur de fond</string>
    <string name="A">Bouton A</string>
    <string name="T">Bouton T</string>
    <string name="C">Bouton C</string>
    <string name="G">Bouton G</string>
    <string name="boutonA">Activer/Désactiver le bouton A</string>
    <string name="boutonT">Activer/Désactiver le bouton T</string>
    <string name="boutonC">Activer/Désactiver le bouton C</string>
    <string name="boutonG">Activer/Désactiver le bouton G</string>
    <string name="categorie">categorie</string>
    <string name="parametre">Parametres</string>
</resources>